Add notes for Lambdas and Collections

--- a/9.Collections and Generics/9.0 Collection Framework.md
+++ b/9.Collections and Generics/9.0 Collection Framework.md
@@ -98,6 +98,16 @@ var list3 = new ArrayList<String>(10);
 
 #### List's Factory Methods:
 
+- The `List.of()` and `List.copyOf()` static factory methods provide a convenient way to create **unmodifiable lists**. 
+
+__Unmodifiable Lists Characteristics:__
+
+- Elements cannot be added, removed, or replaced. 
+- Calling any mutator method on the List will always cause UnsupportedOperationException to be thrown. 
+- However, if the contained elements are themselves mutable, this may cause the List's contents to appear to change.
+- They disallow null elements. Attempts to create them with null elements result in NullPointerException.
+- The order of elements in the list is the same as the order of the provided arguments, or of the elements in the provided array.
+
 ![List_Factory_methods.png](images/List_Factory_methods.png)
 
 ````java
@@ -193,20 +203,19 @@ __TreeSet:__
 
 #### Set Factory Methods: Unmodifiable Sets
 
-- The Set.of and Set.copyOf static factory methods provide a convenient way to create unmodifiable sets. 
-- The Set instances created by these methods have the following characteristics:
+- The `Set.of()` and `Set.copyOf()` static factory methods provide a convenient way to create **unmodifiable sets**. 
 
-      - They are unmodifiable. Elements cannot be added or removed. Calling any mutator method on the Set will always cause UnsupportedOperationException to be thrown. However, if the contained elements are themselves mutable, this may cause the Set to behave inconsistently or its contents to appear to change.
-      - They disallow null elements. Attempts to create them with null elements result in NullPointerException.
-      - They are serializable if all elements are serializable.
-      - They reject duplicate elements at creation time. Duplicate elements passed to a static factory method result in IllegalArgumentException.
-      - The iteration order of set elements is unspecified and is subject to change.
-      - They are value-based. Programmers should treat instances that are equal as interchangeable and should not use them for synchronization, or unpredictable behavior may occur. For example, in a future release, synchronization may fail. Callers should make no assumptions about the identity of the returned instances. Factories are free to create new instances or reuse existing ones.
-      - They are serialized as specified on the Serialized Form page.
-      - Like a List, you can create an **immutable Set** in one line or make a copy of an existing one.
+__Unmodifiable Sets Characteristics:__
 
-- Source: https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/util/Set.html
-
+- They are unmodifiable. Elements cannot be added or removed. 
+- Calling any mutator method on the Set will always cause UnsupportedOperationException to be thrown. 
+- However, if the contained elements are themselves mutable, this may cause the Set to behave inconsistently or its contents to appear to change.
+- They disallow null elements. Attempts to create them with null elements result in NullPointerException.
+- They reject duplicate elements at creation time. Duplicate elements passed to a static factory method result in IllegalArgumentException.
+- The iteration order of set elements is unspecified and is subject to change.
+- They are value-based. Programmers should treat instances that are equal as interchangeable and should not use them for synchronization, or unpredictable behavior may occur.
+- For example, in a future release, synchronization may fail. Callers should make no assumptions about the identity of the returned instances.
+- Like a List, you can create an **Immutable Set** in one line or make a copy of an existing one.
 
 
 __Example:__
@@ -329,10 +338,124 @@ __2.Min Heap:__ The root node contains the minimum value, and the values increas
 
 ## 4. Map
 
+- Map is used when we want to identify the values by using keys or to maintain key-value pairs
+- Example: Phone Book: Key: Name Value: Phone Number
+- A map cannot contain duplicate keys; each key can map to at most one value.
 
+
+__Factory Methods:__
+- The `Map.of()`, `Map.ofEntries()`, and `Map.copyOf()` static factory methods provide a convenient way to create __unmodifiable maps.__
+
+__Unmodifiable Maps Characteristics:__
+
+- They are unmodifiable. Keys and values cannot be added, removed, or updated. 
+- Calling any mutator method on the Map will always cause UnsupportedOperationException to be thrown.
+- However, if the contained keys or values are themselves mutable, this may cause the Map to behave inconsistently or its contents to appear to change.
+- They disallow null keys and values. Attempts to create them with null keys or values result in NullPointerException.
+- They reject duplicate keys at creation time. Duplicate keys passed to a static factory method result in IllegalArgumentException.
+  
+
+````java
+//Method Signatures
+static <K,V> Map<K,V> of();
+static <K,V> Map<K,V> ofEntries(Map.Entry<? extends K,? extends V>... entries);
+static <K,V> Map<K,V> copyOf(Map<? extends K,? extends V> map);
+````
+
+````java
+ 
+var map1 = Map.of("sam","+9112252525252", "john", "+000 12121212122");
+
+var map2 = Map.ofEntries(Map.entry("sam","+9112252525252"),
+                        Map.entry("john", "+000 12121212122"));
+
+var map3 = Map.copyOf(map1);
+
+````
+
+### Map Implementations:
+#### 1.HashMap: 
+- A HashMap stores the keys in a hash table. It uses the hashCode() method of the keys to retrieve their values more efficiently.
+- The main benefit is that adding elements and retrieving the element by key both have constant time.
+- Insertion Order is not Preserved.
+
+#### 2. LinkedHashMap:
+- Same as HashMap except, it maintains the insertion order of the keys
+
+#### 3. TreeMap:
+- A TreeMap stores the keys in a sorted tree structure.
+- The main benefit is that the keys are always in sorted order. 
+- Like a TreeSet, the trade-off is that adding and checking whether a key is present takes longer as the tree grows larger.
+
+#### Map Interface Methods:
+
+![map_interface_methods_1.png](images/map_interface_methods_1.png)
+
+![map_interface_methods_2.png](images/map_interface_methods_2.png)
+
+![map_interface_methods_3.png](images/map_interface_methods_3.png)
+
+__Map Iteration:__
+
+````java
+var map = Map.of("sam","+9112252525252", "john", "+000 12121212122");
+//itearations
+map.forEach((k, v) -> System.out.println(v));
+
+map.entrySet().forEach(e -> System.out.println(e.getKey() + " " + e.getValue()));
+
+map.keySet().forEach(System.out::println);
+        
+map.values().forEach(System.out::println);
+
+````
+
+__Merging Data:__
+
+- The merge() method adds logic of what to choose. 
+- Suppose we want to choose the ride with the longest name. 
+- We can write code to express this by passing a mapping function to the merge() method:
+
+````java
+BiFunction<String, String, String> mapper = (v1, v2) -> v1.length()> v2.length() ? v1: v2;
+
+Map<String, String> favorites = new HashMap<>();
+favorites.put("Jenny", "Bus Tour");
+favorites.put("Tom", "Tram");
+
+String jenny = favorites.merge("Jenny", "Skyride", mapper);
+String tom = favorites.merge("Tom", "Skyride", mapper);
+
+System.out.println(favorites); // {Tom=Skyride, Jenny=Bus Tour}
+System.out.println(jenny); // Bus Tour
+System.out.println(tom); // Skyride
+````
+
+![map_merge_method.png](images/map_merge_method.png)
+
+
+__Collections Summary:__
+
+![collections_comparisions.png](images/collections_comparisions.png)
+
+![collections_comparisions2.png](images/collections_comparisions_2.png)
+
+__Older Collections:__
+
+- There are a few collections that are no longer on the exam but that you might come across in older code. 
+- All three were early Java data structures you could use with threads: 
+
+    Vector: Implements List.
+    Hashtable: Implements Map.
+    Stack: Implements Queue.
+
+- These classes are rarely used anymore, as there are much better concurrent alternatives that we cover in Chapter 13.
 
 #### Exam Points:
-1. Unboxing Nulls:
+- The data structures that involve sorting do not allow null values.
+
+__Unboxing Nulls:__
+
 ````java
 var heights = new ArrayList<Integer>();
 heights.add(null);
@@ -340,7 +463,12 @@ int h = heights.get(0); // NullPointerException
 
 Integer h = heights.get(0); //Works Fine
 ````
-- we try to unbox that null to an int primitive. Be careful when you see null in relation to autoboxing.
+- we try to unbox that are null to an int primitive. Be careful when you see null in relation to autoboxing.
 
+
+#### API Docs:
+1. https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/util/package-summary.html
 #### Refrences:
 1. https://silvahansini.medium.com/an-introduction-to-the-collection-framework-in-java-d13e30530161
+
+
