add notes to building blocks chapter

--- a/1.Building Blocks/1.BuildingBlocks.md
+++ b/1.Building Blocks/1.BuildingBlocks.md
@@ -72,7 +72,7 @@ public class ClassB {
   java --class-path classes packageb.ClassB
 ````
 
-![classpath_options.png](classpath_options.png)
+![classpath_options.png](images/classpath_options.png)
 
 - If the class files are in separate JAR, you can also specify the location of the other files explicitly using a classpath
 ````java
@@ -97,7 +97,7 @@ jar --create --verbose --file myNewFile.jar .
 jar -cvf myNewFile.jar -C dir .
 ````
 
-![jar_cmd_options.png](jar_cmd_options.png)
+![jar_cmd_options.png](images/jar_cmd_options.png)
 
 ___
 
@@ -105,7 +105,7 @@ ___
 
 - Comments can go anywhere in the code.
 
-![order_of_elements_in_class_file.png](order_of_elements_in_class_file.png)
+![order_of_elements_in_class_file.png](images/order_of_elements_in_class_file.png)
 
 - Got all that? Think of the acronym PIC (picture): package, import, and class. 
 - Fields and methods are easier to remember because they merely have to be inside a class.
@@ -166,7 +166,7 @@ ___
 - all Java objects are just a complex collection of these primitive data types.
 - A primitive is just a single value in memory, such as a number or character.
 
-![primitive_types.png](primitive_types.png)
+![primitive_types.png](images/primitive_types.png)
 
 - The ``byte, short, int, and long`` types are used for integer values without decimal points.
 - All of the numeric types are signed and reserve one of their bits to cover a negative range.
@@ -250,7 +250,7 @@ String s3 = new String("Hello World!");
 
 #### Creating Wrapper Classes:
 
-![wrapper_classes.png](wrapper_classes.png)
+![wrapper_classes.png](images/wrapper_classes.png)
 
 - There is also a valueOf() variant that converts a String into the wrapper class.
   For example:
@@ -295,14 +295,14 @@ String eyeTest = "\"Java Study Guide\"\n by Scott & Jeanne";
 
 ````
 
-![img.png](text_blocks.png)
+![img.png](images/text_blocks.png)
 
 - A text block starts and ends with three double quotes ("""), and the contents don’t need to be escaped.
 - **_Essential whitespace_** is part of your String and is important to you. 
 - **_Incidental whitespace_** just happens to be there to make the code easier to read. 
 - You can reformat your code and change the amount of incidental whitespace without any impact on your String value.
 
-![text_block_formatting.png](text_block_formatting.png)
+![text_block_formatting.png](images/text_block_formatting.png)
 
 ````java
 String block = """doe"""; // DOES NOT COMPILE
@@ -359,7 +359,7 @@ ___
 
 - Reserved Keywords:
 
-![reserved_keywords.png](reserved_keywords.png)
+![reserved_keywords.png](images/reserved_keywords.png)
 
 - here are other names that you can’t use. For example, true, false, and null are literal values, so they can’t be variable names
 - Examples:
@@ -549,7 +549,7 @@ ___
 - Object may never be garbage collected, such as if the program ends before the garbage collection runs.
 
 
-![object_reference.png](object_reference.png)
+![object_reference.png](images/object_reference.png)
 
 - 
 
