Add notes for operators

--- a/1.Building Blocks/1.BuildingBlocks.md
+++ b/1.Building Blocks/1.BuildingBlocks.md
@@ -175,6 +175,13 @@ ___
 - Without an l or L, Java interprets a number without a decimal point as an int in most scenarios.
 - A float requires the letter f or F following the number so Java knows it is a float. Without an f or F, Java interprets a decimal value as a double.
 - Although floating point numbers are declared with ``f`` suffix, they are not printed with `f` suffix.
+````java
+double x = 39.21;
+float y = 2.1; // DOES NOT COMPILE  incompatible types: possible lossy conversion from double to float 
+//without mentioning F/f it is considered as double
+float m = 2.1f;
+var z = x + m;// z is double
+````
 
 #### Signed and Unsigned: short and char:
 - For the exam, you should be aware that short and char are closely related, as both are stored as integral types with the same 16-bit length.
