--- a/1.Building Blocks/1.BuildingBlocks.md
+++ b/1.Building Blocks/1.BuildingBlocks.md
@@ -25,7 +25,7 @@ import java.util.concurrent.atomic.*;
   - Another case of redundancy involves importing a class that is in the same package as the class importing it. Java automatically looks in the current package for other classes.
   - Files and Paths are both in the package java.nio.file. The exam may use packages you may never have seen before.
 
-![imports_rules.png](imports_rules.png)
+![imports_rules.png](./images/imports_rules.png)
 
 ---
 
@@ -51,7 +51,7 @@ public class ClassB {
 - ``javac packagea/*.java packageb/*.java``
 - you cannot use a wildcard to include subdirectories
 
-![pckg_compile_structure.png](pckg_compile_structure.png)
+![pckg_compile_structure.png](./images/pckg_compile_structure.png)
 - Run: ``java packageb.ClassB``
 
 
@@ -61,7 +61,7 @@ public class ClassB {
 
 - Compile with ``-d``
 - ``javac -d` classes packagea/ClassA.java packageb/ClassB.java``
-- ![pckg_compile_with_-d.png](pckg_compile_with_-d.png)
+- ![pckg_compile_with_-d.png](./images/pckg_compile_with_-d.png)
 - To run the program, you specify the classpath so Java knows where to find the classes.
   There are three options you can use. All three of these do the same thing:
 ````java
