add notes for exam topics

--- a/ocjp-17_exam_notes/9. Collections & Generics.md
+++ b/ocjp-17_exam_notes/9. Collections & Generics.md
@@ -14,4 +14,16 @@ Map<String, List<String>> stateCitiesMap = new HashMap<String, List<>>();// - Yo
 Map<String, List<String>> stateCitiesMap = new HashMap<>(); //This is the right way to use the diamond operator.
 Map<String, List<String>> stateCitiesMap = new HashMap<String, List<String>>();//This is how you would do it without using the diamond operator.
 ````
+
+- What will the following code print when run?
+````java
+Deque<Integer> d = new ArrayDeque<>();
+d.push(1);
+d.push(2);
+d.push(3);
+System.out.println(d.pollFirst()); //3
+System.out.println(d.poll());//2
+System.out.println(d.pollLast());//1
+````
+- f you use push, objects will be added in the front and if you then use remove, items will be removed from the front. In this question, you push 1, 2, and 3, that means, the Deque now contains 3, 2, 1.  Now, pollFirst() will return 3, poll() will return 2, and pollLast() will return 1. Hence, it will print 3, 2, 1.
  
