--- a/ocjp-17_exam_notes/basics-and-oops/4.1. Java_Types.md
+++ b/ocjp-17_exam_notes/basics-and-oops/4.1. Java_Types.md
@@ -12,6 +12,24 @@
 <summary>1. Classes:</summary>
 
 
+
+## Exam Points:
+
+### abstract classes:
+
+    - A class is uninstantiable if the class is declared abstract.
+
+    - If a method has been declared as abstract, it cannot provide an implementation (i.e. it cannot have a method body ) and the class containing that method must be declared abstract).
+
+    - If a method is not declared abstract, it must provide a method body (the class can be abstract but not necessarily so).
+
+    - If any method in a class is declared abstract, then the whole class must be declared abstract.
+
+    - An class can still be made abstract even if it has no abstract method.
+
+
+
+
 </details>
 
 ___
@@ -179,7 +197,73 @@ ___
 <details>
 <summary>3. Enums: </summary>
 
+````java
+enum Title
+{
+    MR("Mr."), MS1("Ms."),AB("A"), MS2("Ms.");
+    private String title;
+    private Title(String s){
+    title = s;
+    }  
+}
 
+public class TestClass{
+    public static void main(String[] args) {
+        var ts = new TreeSet<Title>();
+        ts.add(Title.MS2);
+        ts.add(Title.MR);
+        ts.add(Title.MS1);
+        for(Title t :  ts){
+            System.out.println(t);
+        }
+    }
+}
+//Output: MR,MS1,AB,MS2 this is the order which they are defined.
+````
+#### Examp Points:
+
+- Every enum implements Comparable and the natural order of enums is **the order in which they are defined**.
+- An enum with many constructors, fields, and methods may start to resemble a full-featured class.
+- 
+
+#### Summary Exam Points:
+
+
+      1. You need to know the following facts about enums:
+
+      2. Enum constructor is always private. You cannot make it public or protected. If an enum type has no constructor declarations, then a private constructor that takes no parameters is automatically provided.
+
+      3. An enum is implicitly final, which means you cannot extend it. For the same reason, it cannot be sealed.
+
+      4. You cannot extend an enum from another enum or class because an enum implicitly extends java.lang.Enum. But an enum can implement interfaces.
+
+      5. Since enum maintains exactly one instance of its constants, you cannot clone it. You cannot even override the clone method in an enum because java.lang.Enum makes it final.
+
+      6. Compiler provides an enum with two public static methods automatically - values() and valueOf(String). The values() method returns an array of its constants and valueOf() method tries to match the String argument exactly (i.e. case sensitive) with an enum constant and returns that constant if successful otherwise it throws java.lang.IllegalArgumentException.
+
+      7. By default, an enum's toString() prints the enum name but you can override it to print anything you want.
+
+      8. It implements java.io.Serializable.
+
+      9. It implements java.lang.Comparable (thus, an enum can be added to sorted collections such as SortedSet, TreeSet, and TreeMap). The natural order of the enum values is the order in which they are defined i.e. in the order of their ordinal value.
+      
+      10. It has a method ordinal(), which returns the index (starting with 0) of that constant i.e. the position of that constant in its enum declaration.
+
+      11. It has a method name(), which returns the name of this enum constant, exactly as declared in its enum declaration.
+
+
+- EQ1:
+- Unlike a regular java class, you cannot access a non-final static field from an enum's constructor.
+```java
+enum Pets
+{
+  DOG("D"), CAT("C"), FISH("F");
+  static String prefix = "I am ";
+  String name;
+  Pets(String s) { name = prefix + s;} //DOES NOT COMPILE
+  public String getData(){ return name; }
+}
+```
 </details>
 
 ---
@@ -429,40 +513,99 @@ ___
 
 <details>
 
-<summary> 4. Enums:</summary>
+<summary> 5. Records:</summary>
 
-## 4. Enums:
+## 5. Records:
 
-
-#### WorkBooks:
+### Exam Points:
+- A record declaration specifies a new record class, a restricted kind of class that defines a simple aggregate of values.
+- A record declaration implicitly creates instance fields, which are private and final. 
+- It also implicitly creates public accessor methods for these fields. 
+- Together, the fields and the corresponding methods are called record "components".
+- An accessor method is a method with the same name as the record field and an empty formal parameter list. 
+- Such methods act as the getter methods for those fields.
+- For Example:
+````java
+public record Student(
+  int id, //record component
+  String name //record component
+) //record header
+{ } //record body
+````
+- This is roughly equivalent to the following class:
 
 ````java
-enum Title
+public final class Student extends Record
 {
-    MR("Mr."), MS1("Ms."),AB("A"), MS2("Ms.");
-    private String title;
-    private Title(String s){
-    title = s;
-    }  
+   private final int id; //component field
+   private final String name; //component field
+   public Student(int id, String name){  //canonical constructor
+      this.id = id;
+	  this.name = name;
+   }
+   
+   public int id(){ return id; } //accessor
+   public String name(){ return name; } //accessor
+   
+   //hashCode, equals, and toString methods are also provided by the compiler.
 }
+````
 
-public class TestClass{
-    public static void main(String[] args) {
-        var ts = new TreeSet<Title>();
-        ts.add(Title.MS2);
-        ts.add(Title.MR);
-        ts.add(Title.MS1);
-        for(Title t :  ts){
-            System.out.println(t);
-        }
+- Observe that the accessor methods do not follow the JavaBeans convention (where a getter method is prefixed with get). Further observe that instance fields are final and the class does not have any setters.
+
+#### Basic Rules:
+- You can define a top level record i.e. directly under a package, a nested member record class i.e. within a class/interface, or a local record i.e. within a method.
+- A nested record class is implicitly static. That is, every member record class and local record class is static. It is permitted for the declaration of a member record class to redundantly specify the static modifier, but it is not permitted for the declaration of a local record class.
+- A record class is implicitly final. It is permitted for the declaration of a record class to redundantly specify the final modifier.
+- Records cannot be marked abstract, sealed, or non-sealed.
+- The direct superclass type of a record class is Record. Thus, a record cannot have an extends clause and so it cannot extend any other class.
+- The serialization mechanism treats instances of a record class differently than ordinary serializable or externalizable objects. In particular, a record object is deserialized using the canonical constructor.
+- The body of a record declaration may contain constructor and member declarations as well as static initializers. But there are some restrictions as well:
+    - It cannot contain an instance field declaration (static fields are allowed).
+    - It cannot have an instance initializer (static initializers are allowed).
+    - It cannot have abstract or native methods
+
+#### Constructors and methods:
+
+- If a canonical constructor is not provided by the programmer explicitly, the compiler will provide one automatically with the same access modifier as that of the record itself. It takes the same arguments as the record components and initializes all the components. This is called the canonical constructor.
+- A programmer may provide the canonical constructor in regular form (just like the way you define a constructor for any regular class) or in a "compact form" like this:
+````java
+public record Student(int id, String name){
+    public Student{ //no parameter list is specified here
+	   if(id <0) throw new IllegalArgumentException();
+	}
+}
+````
+- After the last line of the compact constructor, all component fields of the record class are implicitly initialized to the values of the corresponding formal parameters specified in the call to new.
+- If you write a non-canonical constructor in a record explicitly then, on the first line of such a constructor, you must provide a call to either the canonical constructor or another constructor. 
+- For example:
+````java
+public record Student(int id, String name){
+    public Student(){ //a non-canonical constructor
+        this(10); //this line or a call to the canonical constructor is required 
+    }
+    public Student(int id){ //another non-canonical constructor
+        this(id, ""); //this line is required 
+    }
+    public Student(int id, String name){ //regular form canonical constructor
+        this.id = id; this.name=name;
     }
 }
-//Output: MR,MS1,AB,MS2 this is the order which they are defined.
 ````
-#### Examp Points:
+- An important difference between a record and a regular class with respect to constructors is that the compiler provides a canonical constructor for a record even when the programmer provides a non-canonical constructor and does not provide the canonical constructor.
+- In a regular class, the compiler does not provide the default no-args constructor if the programmer provides any other constructor for the class.
+- A canonical constructor cannot be generic.
+- A canonical constructor cannot have a throws clause (not even a throws clause with unchecked exceptions is allowed) but a non-canonical constructor may have a throws clause.
+- Accessor methods must not throw any exceptions.
+- You may have other methods in a record as needed. In this respect, a record is like any other class.
+- It is a compile-time error for a record declaration to declare a record component with the name clone, finalize, getClass, hashCode, notify, notifyAll, toString, or wait. Observe that all these are public or protected methods of Object class.
+````java
+record Student(int id, String name, String toString){ //DOES NOT COMPILE:  error: illegal record component name toString
+	
+}
+````
 
-- Every enum implements Comparable and the natural order of enums is **the order in which they are defined**.
-- An enum with many constructors, fields, and methods may start to resemble a full-featured class.
+
 </details>
 
 ---
@@ -488,6 +631,11 @@ public class TestClass{
 - 
 
 
+#### Exam Points:
+
+1. An inteface may have a nested sealed class,
+2. The permits clause is optional for nested sealed classes/interface.
+3. Even though the permits clause is option for a nested sealed classes/interface, existence of a direct subclass of that sealed class/interface is required.
 
 
 </details>
