add notes for IO

--- a/1.Building Blocks/1.BuildingBlocks.md
+++ b/1.Building Blocks/1.BuildingBlocks.md
@@ -5,7 +5,8 @@
 - If you do have a public type, it needs to match the filename.
 
 ````java
-public final static void main(final String[] args) {
+public final static void main(final String[] args) { //Final keyword is optional
+public static void main(String... ar) {
     
 }
 ````
@@ -107,7 +108,7 @@ ___
 
 ![order_of_elements_in_class_file.png](images/order_of_elements_in_class_file.png)
 
-- Got all that? Think of the acronym PIC (picture): package, import, and class. 
+- Got all that? Think of the acronym **PIC (picture): package, import, and class.** 
 - Fields and methods are easier to remember because they merely have to be inside a class.
 
 
@@ -169,12 +170,19 @@ ___
 ![primitive_types.png](images/primitive_types.png)
 
 - The ``byte, short, int, and long`` types are used for integer values without decimal points.
-- All of the numeric types are signed and reserve one of their bits to cover a negative range.
+- All the numeric types are signed and reserve one of their bits to cover a negative range.
 - For example, instead of byte covering 0 to 255 (or even 1 to 256) it actually covers -128 to 127.
-- A long requires the letter l or L following the number so Java knows it is a long.
-- Without an l or L, Java interprets a number without a decimal point as an int in most scenarios.
-- A float requires the letter f or F following the number so Java knows it is a float. Without an f or F, Java interprets a decimal value as a double.
-- Although floating point numbers are declared with ``f`` suffix, they are not printed with `f` suffix.
+- A ``float`` requires the letter ``f or F`` following the number so Java knows it is a ``float``.
+- A ``long`` requires the letter ``l or L`` following the number so Java knows it is a long.
+
+__NOTE:__
+
+- Without an ``l or L``, Java interprets a number without a decimal point as an ``int`` in most scenarios.
+- Without an `f or F`, Java interprets a decimal value as a ``double``.
+- All numbers without decimals are considered as Integral Values
+- All numbers with decimals are considered as double values
+- Suffixes will never printedAlthough we keep `l or L` for long and `f or F` for floating point numbers are declared with ``f`` suffix, they are not printed with `f` suffix.
+- 
 ````java
 double x = 39.21;
 float y = 2.1; // DOES NOT COMPILE  incompatible types: possible lossy conversion from double to float 
@@ -328,7 +336,7 @@ String block = """
 String block = """
                 doe \n
                 deer
-                """;
+                """; //after doe 2 + after deer 2
 ````
 - This time we have four lines. Since the text block has the closing """ on a separate line,
   we have three lines for the lines in the text block plus the explicit \n.
