--- a/ocjp-17_exam_notes/12.modules/12.Modules.md
+++ b/ocjp-17_exam_notes/12.modules/12.Modules.md
@@ -1,10 +1,47 @@
 # Modules:
 
+![img.png](img.png)
+
+````shell
+jar -cvf mods/zoo.animal.feeding.jar -C feeding/ .
+java -p mods -m zoo.animal.feeding/zoo.animal.feeding.Task
+
+````
+
+![img_1.png](img_1.png)
+
+
+````java
+open module zoo.animal.talks {
+}
+
+open module zoo.animal.talks {
+    opens zoo.animal.talks.schedule; // DOES NOT COMPILE: the packages are already open!
+}
+````
+
+![img_2.png](img_2.png)
+
+![img_3.png](img_3.png)
+
+
+![img_4.png](img_4.png)
+
+![img_5.png](img_5.png)
+
+![img_6.png](img_6.png)
+
+![img_7.png](img_7.png)
+
+![img_8.png](img_8.png)
+
+![img_9.png](img_9.png)
+
 
 
 #### Exam Points:
 <details>
-<summary>1. How to execute a call inside a module?</summary>
+<summary>1. How to execute a class inside a module?</summary>
 
 - Given that a class named com.xyz.fx.Main is part of a module named xyz.fx packaged in fx.jar, which of the following commands can be used to execute this class?
 
