--- a/9.Collections and Generics/9.3 Generics.md
+++ b/9.Collections and Generics/9.3 Generics.md
@@ -40,8 +40,11 @@ names.add(new StringBuilder("Webby")); // DOES NOT COMPILE
 #### Advantages of Generics:
 
 __1. Type-safety:__ We can hold only a single type of objects in generics. It does not allow storing other objects.
+
 __2. Individual Type casting is not required:__ There is no need to typecast the object.
+
 __3. Compile-Time Type Checking:__ It is checked at compile time so a problem will not occur at runtime.
+
 __4. Code Reusability:__ we can use generics to create a single class, methods, interface for multiple types. This is essentially using the same piece of code to cater to multiple scenarios without code duplication.
 
 ### Create our own Generic Classes
@@ -75,12 +78,13 @@ class PrintGen<E> {
 
 - The generic type T is available anywhere within the PrintGen class. When you instantiate the class, you tell the compiler what T should be for that particular instance.
 
-#### Naming Convention
+#### Naming Conventions for Generics
 
-Naming Conventions for Generics
-A type parameter can be named anything you want. The convention is to use single uppercase
-letters to make it obvious that they aren’t real class names. The following are common
-letters to use:
+
+- A type parameter can be named anything you want. 
+- The convention is to use **single uppercase letters** to make it obvious that they aren’t real class names. 
+- The following are common letters to use:
+
 
     E for an element
     K for a map key
